kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: card-game
  labels:
    name: card-game
